[gd_scene load_steps=6 format=2]

[ext_resource path="res://outras_configuracoes/translate_creditos.gd" type="Script" id=1]
[ext_resource path="res://outras_configuracoes/background.png" type="Texture" id=2]
[ext_resource path="res://outras_configuracoes/creditos_jogo.png" type="Texture" id=3]
[ext_resource path="res://sprites/menu_fases_itens/back_press.png" type="Texture" id=4]
[ext_resource path="res://sprites/menu_fases_itens/back.png" type="Texture" id=5]

[node name="creditos" type="Node2D"]

[node name="background" type="Sprite" parent="."]
modulate = Color( 0, 0, 0, 1 )
position = Vector2( 91.1275, 246.343 )
scale = Vector2( 0.459259, 0.4125 )
texture = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="translate_creditos" type="Node2D" parent="."]
script = ExtResource( 1 )

[node name="creditos_jogo" type="Sprite" parent="translate_creditos"]
visible = false
position = Vector2( 89.312, 566.733 )
scale = Vector2( 0.25169, 0.287093 )
texture = ExtResource( 3 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="translate_creditos"]
position = Vector2( 117.254, 1351.18 )
scale = Vector2( 12.4658, 1 )

[node name="sair" type="TextureButton" parent="."]
margin_left = 153.761
margin_top = 11.381
margin_right = 217.761
margin_bottom = 75.381
rect_scale = Vector2( 0.3, 0.3 )
texture_normal = ExtResource( 5 )
texture_pressed = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="screen_entered" from="translate_creditos/VisibilityNotifier2D" to="translate_creditos" method="_on_VisibilityNotifier2D_screen_entered"]
[connection signal="pressed" from="sair" to="translate_creditos" method="_on_sair_pressed"]
