[gd_scene load_steps=15 format=2]

[ext_resource path="res://sprites/nave_fusca/nave_fusca2.png" type="Texture" id=1]
[ext_resource path="res://sprites/nave_fusca/nave_fusca3.png" type="Texture" id=2]
[ext_resource path="res://sprites/nave_fusca/nave_fusca1.png" type="Texture" id=3]
[ext_resource path="res://sprites/nave_fusca/nave_fusca5.png" type="Texture" id=4]
[ext_resource path="res://sprites/nave_fusca/nave_fusca4.png" type="Texture" id=5]
[ext_resource path="res://resource/mapa_marrom.tres" type="TileSet" id=6]
[ext_resource path="res://scenes/mundo_2/nuvens.tscn" type="PackedScene" id=7]
[ext_resource path="res://outras_configuracoes/zeramento.gd" type="Script" id=8]
[ext_resource path="res://outras_configuracoes/translate_creditos.gd" type="Script" id=9]
[ext_resource path="res://outras_configuracoes/zeramento2.png" type="Texture" id=10]
[ext_resource path="res://sounds/The Neon Droid - Apex One.ogg" type="AudioStream" id=11]
[ext_resource path="res://scenes/efeitos/scene_transition.tscn" type="PackedScene" id=12]


[sub_resource type="Animation" id=1]
resource_name = "fusca"
length = 5.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.7, 1.8, 1.9, 2, 2.1, 2.2, 2.3, 2.4, 2.5, 2.6, 2.7, 2.8, 2.9, 3, 3.1, 3.2, 3.3, 3.4, 3.5, 3.6, 3.7, 3.8, 3.9, 4, 4.1, 4.2, 4.3, 4.4, 4.5, 4.6, 4.7, 4.8, 4.9, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 3 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 2 ), ExtResource( 5 ), ExtResource( 4 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5, 3, 4, 5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 224.92, 727.075 ), Vector2( 239.039, 215.88 ), Vector2( 354.149, 614.839 ), Vector2( 94.392, 614.839 ), Vector2( 235.414, 727.075 ) ]
}

[sub_resource type="Animation" id=2]
resource_name = "adeus"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector2( 235.414, 727.075 ), Vector2( 243.823, -252.569 ) ]
}

[node name="zeramento" type="Node2D"]
scale = Vector2( 0.4, 0.4 )
script = ExtResource( 8 )
__meta__ = {
"_edit_vertical_guides_": [ 180.151 ]
}

[node name="hud" type="CanvasLayer" parent="."]

[node name="scene_transition" parent="hud" instance=ExtResource( 12 )]

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 254.387, 269.074 )
scale = Vector2( 0.838, 0.838 )
z_index = 5
texture = ExtResource( 2 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/fusca = SubResource( 1 )

[node name="TileMap" type="TileMap" parent="."]
tile_set = ExtResource( 6 )
cell_size = Vector2( 48, 48 )
format = 1
tile_data = PoolIntArray( -1, 51, 0, -65536, 51, 0, -65535, 51, 0, -65534, 51, 0, -65533, 51, 0, -65532, 51, 0, -65531, 51, 0, -65530, 51, 0, -65529, 51, 0, -65528, 51, 0, -65527, 51, 0, -65526, 51, 0, 65535, 51, 0, 0, 51, 0, 1, 51, 0, 2, 51, 0, 3, 51, 0, 4, 51, 0, 5, 51, 0, 6, 51, 0, 7, 51, 0, 8, 51, 0, 9, 51, 0, 10, 51, 0, 131071, 51, 0, 65536, 51, 0, 65537, 51, 0, 65538, 51, 0, 65539, 51, 0, 65540, 51, 0, 65541, 51, 0, 65542, 51, 0, 65543, 51, 0, 65544, 51, 0, 65545, 51, 0, 65546, 51, 0, 196607, 51, 0, 131072, 51, 0, 131073, 51, 0, 131074, 51, 0, 131075, 51, 0, 131076, 51, 0, 131077, 51, 0, 131078, 51, 0, 131079, 51, 0, 131080, 51, 0, 131081, 51, 0, 131082, 51, 0, 262143, 51, 0, 196608, 51, 0, 196609, 51, 0, 196610, 51, 0, 196611, 51, 0, 196612, 51, 0, 196613, 51, 0, 196614, 51, 0, 196615, 51, 0, 196616, 51, 0, 196617, 51, 0, 196618, 51, 0, 327679, 51, 0, 262144, 51, 0, 262145, 51, 0, 262146, 51, 0, 262147, 51, 0, 262148, 51, 0, 262149, 51, 0, 262150, 51, 0, 262151, 51, 0, 262152, 51, 0, 262153, 51, 0, 262154, 51, 0, 393215, 51, 0, 327680, 51, 0, 327681, 51, 0, 327682, 51, 0, 327683, 51, 0, 327684, 51, 0, 327685, 51, 0, 327686, 51, 0, 327687, 51, 0, 327688, 51, 0, 327689, 51, 0, 327690, 51, 0, 458751, 51, 0, 393216, 51, 0, 393217, 51, 0, 393218, 51, 0, 393219, 51, 0, 393220, 51, 0, 393221, 51, 0, 393222, 51, 0, 393223, 51, 0, 393224, 51, 0, 393225, 51, 0, 393226, 51, 0, 524287, 51, 0, 458752, 51, 0, 458753, 51, 0, 458754, 51, 0, 458755, 51, 0, 458756, 51, 0, 458757, 51, 0, 458758, 51, 0, 458759, 51, 0, 458760, 51, 0, 458761, 51, 0, 458762, 51, 0, 589823, 51, 0, 524288, 51, 0, 524289, 51, 0, 524290, 51, 0, 524291, 51, 0, 524292, 51, 0, 524293, 51, 0, 524294, 51, 0, 524295, 51, 0, 524296, 51, 0, 524297, 51, 0, 524298, 51, 0, 655359, 51, 0, 589824, 51, 0, 589825, 51, 0, 589826, 51, 0, 589827, 51, 0, 589828, 51, 0, 589829, 51, 0, 589830, 51, 0, 589831, 51, 0, 589832, 51, 0, 589833, 51, 0, 589834, 51, 0, 720895, 51, 0, 655360, 51, 0, 655361, 51, 0, 655362, 51, 0, 655363, 51, 0, 655364, 51, 0, 655365, 51, 0, 655366, 51, 0, 655367, 51, 0, 655368, 51, 0, 655369, 51, 0, 655370, 51, 0, 786431, 51, 0, 720896, 51, 0, 720897, 51, 0, 720898, 51, 0, 720899, 51, 0, 720900, 51, 0, 720901, 51, 0, 720902, 51, 0, 720903, 51, 0, 720904, 51, 0, 720905, 51, 0, 720906, 51, 0, 851967, 51, 0, 786432, 51, 0, 786433, 51, 0, 786434, 51, 0, 786435, 51, 0, 786436, 51, 0, 786437, 51, 0, 786438, 51, 0, 786439, 51, 0, 786440, 51, 0, 786441, 51, 0, 786442, 51, 0, 917503, 51, 0, 851968, 51, 0, 851969, 51, 0, 851970, 51, 0, 851971, 51, 0, 851972, 51, 0, 851973, 51, 0, 851974, 51, 0, 851975, 51, 0, 851976, 51, 0, 851977, 51, 0, 851978, 51, 0, 983039, 51, 0, 917504, 51, 0, 917505, 51, 0, 917506, 51, 0, 917507, 51, 0, 917508, 51, 0, 917509, 51, 0, 917510, 51, 0, 917511, 51, 0, 917512, 51, 0, 917513, 51, 0, 917514, 51, 0, 1048575, 51, 0, 983040, 51, 0, 983041, 51, 0, 983042, 51, 0, 983043, 51, 0, 983044, 51, 0, 983045, 51, 0, 983046, 51, 0, 983047, 51, 0, 983048, 51, 0, 983049, 51, 0, 983050, 51, 0, 1114111, 51, 0, 1048576, 51, 0, 1048577, 51, 0, 1048578, 51, 0, 1048579, 51, 0, 1048580, 51, 0, 1048581, 51, 0, 1048582, 51, 0, 1048583, 51, 0, 1048584, 51, 0, 1048585, 51, 0, 1048586, 51, 0 )

[node name="nuvens" parent="." instance=ExtResource( 7 )]

[node name="translation_letreiro" type="Node2D" parent="."]
z_index = 7
script = ExtResource( 9 )

[node name="zeramento" type="Sprite" parent="translation_letreiro"]
position = Vector2( 228.345, 1488.32 )
scale = Vector2( 0.590439, 0.662909 )
texture = ExtResource( 10 )

[node name="Visibilityzeramento" type="VisibilityNotifier2D" parent="translation_letreiro"]
position = Vector2( 226.494, 2191.95 )
scale = Vector2( 21.7043, 2.35824 )

[node name="anim" type="AnimationPlayer" parent="translation_letreiro"]
anims/adeus = SubResource( 2 )

[node name="adeus" type="VisibilityNotifier2D" parent="translation_letreiro"]
position = Vector2( 225.796, 2146.96 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )
autoplay = true
[connection signal="screen_exited" from="translation_letreiro/Visibilityzeramento" to="translation_letreiro" method="_on_Visibilityzeramento_screen_exited"]
[connection signal="screen_exited" from="translation_letreiro/adeus" to="translation_letreiro" method="_on_adeus_screen_exited"]
